@@ -13,8 +13,28 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>16</source>
-                    <target>16</target>
+                    <source>17</source>
+                    <target>17</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <environmentVariables>
+                        <PATH>C:\Program Files\Java\jdk-17-panama\bin</PATH>
+                    </environmentVariables>
+                    <executable>java</executable>
+                    <arguments>
+                        <argument>--add-modules</argument>
+                        <argument>jdk.incubator.foreign</argument>
+                        <argument>--module-path</argument>
+                        <modulepath/>
+                        <argument>--module</argument>
+                        <argument>com.brcolow.vulkan/com.brcolow.vulkan.Vulkan</argument>
+                        <argument>--enable-native-access=com.brcolow.vulkan</argument>
+                    </arguments>
                 </configuration>
             </plugin>
         </plugins>
